# rust-app-fullstack

./: .gitignore  Makefile  docker-compose.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/src/: lib.rs  main.rs
backend/tests/: concurrency.rs
